k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geometrix-ui
  namespace: geometrix
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: geometrix-ui.garry-ai.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: geometrix-ui
                port:
                  number: 80
  tls:
    - hosts:
        - geometrix-ui.garry-ai.cloud
      secretName: geometrix-ui-tls
